--- a/starter-code/modularity1.html
+++ b/starter-code/modularity1.html
@@ -105,11 +105,13 @@
 	    		<p class="instruction-text">Bar widths are set in the HTML as if they were populated from the back-end. Everything else should be styled with CSS.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<table>
-			    		<tr>
+			    	<div >
+			    	<table class="chart">
+			           	<tr>
 			    			<th>Javascript</th>
 			    			<td><div style="width: 99%">21%</div></td>
 			    		</tr>
+			    		
 			    		<tr>
 			    			<th>Ruby</th>
 			    			<td><div style="width: 57.1%">12%</div></td>
@@ -158,12 +160,14 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-			    		<div>
-				    		<div>
+			    		<div class="lightbox_background">
+				    		<div class="lightbox_white">
+				    			<div>
 					    		<h3>Hello</h3>
 						    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 						    	<div>
-						    		<a href="#">Close</a>
+						    		<a href="#data_table" class="button">Close</a>
+						    		</div>
 						    	</div>
 				    		</div>
 				    	</div>
@@ -178,8 +182,8 @@
 	    		<p class="instruction-text">A media block is a left-floated image with some content beside it. Think Facebook updates.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<img src="http://placehold.it/50">
-			    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+			    	<img class="float1" src="http://placehold.it/50">
+			    	<p class="float_text">Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    <!-- End editable area -->
 			    </div>
 
@@ -188,11 +192,11 @@
 		    	<!-- Edit here -->
 					<div class="instruction-answer">
 			    	<div>
-				    	<img src="http://placehold.it/50">
+				    	<img class="float2" src="http://placehold.it/50">
 				    </div>
 			    	<div>
-				    	<h2>Cupcake Ipsum</h2>
-				    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+				    	<h2 class="float_text">Cupcake Ipsum</h2>
+				    	<p class="float_text">Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    </div>
 				    <!-- End editable area -->
 				  </div>
@@ -202,26 +206,26 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-				    	<img src="http://placehold.it/50">
+				    	<img class="float2" src="http://placehold.it/50">
 				    </div>
 			    	<div>
-				    	<h2>Cupcake Ipsum</h2>
-				    	<p>Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+				    	<h2 class="float_text">Cupcake Ipsum</h2>
+				    	<p class="float_text">Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 
 				    	<div>
-					    	<img src="http://placehold.it/32">
+					    	<img class="float2_right" src="http://placehold.it/32">
 					    </div>
-				    	<div>
-					    	<h2>I like cupcakes!</h2>
-					    	<p>Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
+				    	<div class="pushright">
+					    	<h2 class="float_text">I like cupcakes!</h2>
+					    	<p class="float_text">Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
 					    </div>
 
 				    	<div>
-					    	<img src="http://placehold.it/32">
+					    	<img class="float2_right" src="http://placehold.it/32">
 					    </div>
-				    	<div>
-					    	<h2>I like cupcakes, too!</h2>
-					    	<p>Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
+				    	<div class="pushright">
+					    	<h2 class="float_text">I like cupcakes, too!</h2>
+					    	<p class="float_text">Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
 					    </div>
 				    </div>
 				    <!-- End editable area -->
